@@ -3,7 +3,7 @@
 %
 \alias{summary.lmrob}
 \alias{hatvalues.lmrob}
-\alias{.hat.lmrob}
+\alias{.lmrob.hat}
 \alias{vcov.lmrob}
 \alias{print.summary.lmrob}
 \alias{model.matrix.lmrob}
@@ -19,7 +19,7 @@
   \code{\link{weights.lmrob}}), \code{\link{model.matrix}()},
   \code{\link{confint}()}, \code{\link{dummy.coef}()},
   \code{\link{hatvalues}()}, etc.,
-  have explicitly defined \code{lmrob} methods.  \code{.hat.lmrob()} is
+  have explicitly defined \code{lmrob} methods.  \code{.lmrob.hat()} is
   the lower level \dQuote{work horse} of the \code{hatvalues()} method.
 }
 \usage{
@@ -32,6 +32,9 @@
 
 \method{vcov}{lmrob}(object, cov = object$control$cov, \dots)
 \method{model.matrix}{lmrob}(object, \dots)
+
+% not yet
+% .lmrob.hat(x, w = rep(1, NROW(x)), wqr = qr(sqrt(w) * x))
 }
 \arguments{
   \item{object}{an \R object of class \code{lmrob}, typically created by
